[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/textures/ui/arrow_right.png" type="Texture" id=1]
[ext_resource path="res://game/InspectManager.gd" type="Script" id=2]
[ext_resource path="res://assets/textures/ui/exit_button.png" type="Texture" id=3]

[node name="InspectManager" type="Control" groups=["inspector"]]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 2 )

[node name="BG" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.501961 )

[node name="InspectPreview" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 200.0
margin_top = 100.0
margin_right = -200.0
margin_bottom = -150.0
expand = true
stretch_mode = 6

[node name="ScrollLeft" type="TextureButton" parent="."]
self_modulate = Color( 0.658824, 0.631373, 0.631373, 1 )
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 150.0
margin_top = -179.0
margin_right = 240.0
margin_bottom = -79.0
texture_normal = ExtResource( 1 )
expand = true
stretch_mode = 5
flip_h = true

[node name="ScrollRight" type="TextureButton" parent="."]
self_modulate = Color( 0.658824, 0.631373, 0.631373, 1 )
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -240.0
margin_top = -179.0
margin_right = -150.0
margin_bottom = -79.0
texture_normal = ExtResource( 1 )
expand = true
stretch_mode = 5

[node name="ReturnButton" type="TextureButton" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -204.0
margin_top = 45.0
margin_right = -120.0
margin_bottom = 129.0
texture_normal = ExtResource( 3 )

[connection signal="button_up" from="ScrollLeft" to="." method="_on_ScrollLeft_button_up"]
[connection signal="button_up" from="ScrollRight" to="." method="_on_ScrollRight_button_up"]
[connection signal="button_up" from="ReturnButton" to="." method="_on_ReturnButton_button_up"]
